--- a/WcfChat/App.config
+++ b/WcfChat/App.config
@@ -11,8 +11,8 @@
   файл app.config компьютера размещения. Пространство имен System.Configuration не поддерживает файлы конфигурации для библиотек. -->
   <system.serviceModel>
     <services>
-      <service name="WcfChatService.WcfChatService">
-        <endpoint address="" binding="basicHttpBinding" contract="WcfChatService.IWcfChatSevice">
+      <service name="WcfChat.WcfChatService">
+        <endpoint address="" binding="basicHttpBinding" contract="WcfChat.IWcfChatSevice">
           <identity>
             <dns value="localhost" />
           </identity>
