Working reference to service

--- a/WcfChat/App.config
+++ b/WcfChat/App.config
@@ -12,7 +12,7 @@
   <system.serviceModel>
     <services>
       <service name="WcfChat.WcfChatService">
-        <endpoint address="" binding="basicHttpBinding" contract="WcfChat.IWcfChatSevice">
+        <endpoint address="" binding="wsDualHttpBinding" contract="WcfChat.IWcfChatSevice">
           <identity>
             <dns value="localhost" />
           </identity>
