change endpoint in client (now it works)

--- a/WcfChatClient/App.config
+++ b/WcfChatClient/App.config
@@ -5,14 +5,16 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <wsDualHttpBinding>
-                <binding name="WSDualHttpBinding_IWcfChatSevice" />
-            </wsDualHttpBinding>
+            <netTcpBinding>
+              <binding name="netTcpBinding_IWcfChatSevice">
+                <security mode="None" />
+              </binding>
+            </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfChat/Service1/"
-                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IWcfChatSevice"
-                contract="WcfChatServiceReference.IWcfChatSevice" name="WSDualHttpBinding_IWcfChatSevice">
+            <endpoint address="net.tcp://localhost:8080/WcfChatService"
+                binding="netTcpBinding" bindingConfiguration="netTcpBinding_IWcfChatSevice"
+                contract="WcfChatServiceReference.IWcfChatSevice" name="netTcpBinding_IWcfChatSevice">
                 <identity>
                     <dns value="localhost" />
                 </identity>
