Save all messages to Db using repository

--- a/WcfChat/WcfChatService.csproj
+++ b/WcfChat/WcfChatService.csproj
@@ -52,6 +52,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WcfChatDAL\WcfChatDAL.csproj">
+      <Project>{6FB74B50-2243-4B39-BC9D-911FB44D8F9E}</Project>
+      <Name>WcfChatDAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
