Download history on start

--- a/WcfChatClient/WcfChatClient.csproj
+++ b/WcfChatClient/WcfChatClient.csproj
@@ -94,6 +94,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Connected Services\WcfChatServiceReference\Arrays.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Connected Services\WcfChatServiceReference\service.wsdl" />
     <None Include="Connected Services\WcfChatServiceReference\service.xsd">
       <SubType>Designer</SubType>
