--- a/WcfChatClient/App.config
+++ b/WcfChatClient/App.config
@@ -6,15 +6,25 @@
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
-              <binding name="netTcpBinding_IWcfChatSevice">
-                <security mode="None" />
-              </binding>
+                <binding name="NetTcpBinding_IWcfChatSevice">
+                    <security mode="None" />
+                </binding>
             </netTcpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IWcfChatSevice" />
+            </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8080/WcfChatService"
-                binding="netTcpBinding" bindingConfiguration="netTcpBinding_IWcfChatSevice"
-                contract="WcfChatServiceReference.IWcfChatSevice" name="netTcpBinding_IWcfChatSevice">
+            <endpoint address="net.tcp://localhost:8080/WcfChatService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IWcfChatSevice" contract="WcfChatServiceReference.IWcfChatSevice"
+                name="NetTcpBinding_IWcfChatSevice">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfChat/Service1/"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IWcfChatSevice"
+                contract="WcfChatServiceReference.IWcfChatSevice" name="WSDualHttpBinding_IWcfChatSevice">
                 <identity>
                     <dns value="localhost" />
                 </identity>
